--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,11 @@
-@import url("./header.css");
-@import url("./banner.css");
-@import url("./carrossel.css");
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap'); */
+@import url("header.css");
+@import url("banner.css");
+@import url("carrossel.css");
+@import url("cards.css");
+@import url("topicos.css");
+@import url("contato.css");
+@import url("rodape.css");
 
 
 
@@ -9,7 +14,8 @@
   --branco: #ffffff;
   --laranja : #e9b00e;
   --azul-degrade: linear-gradient(97.54deg, #002f52 35.49%, #326589 165.37%);
-  --fonte-principal: "Poppins";
+  --fonte-principal: 'Poppins', sans-serif;
+  --azul: ##002F52;
 }
 
 body {
@@ -18,3 +24,10 @@ body {
   font-size: 1rem;
   font-weight: 400;
 }
+
+/* #home {
+  background-color: var(--cor-de-fundo);
+  font-family: var(--fonte-principal); 
+  font-size: 1rem;
+  font-weight: 400;
+} */
