--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@
   --azul-degrade: linear-gradient(97.54deg, #002f52 35.49%, #326589 165.37%);
   --fonte-principal: 'Poppins', sans-serif;
   --azul: ##002F52;
+  --fonte-secundaria: 'Josefin Sans';
 }
 
 body {
