--- a/css/banner.css
+++ b/css/banner.css
@@ -3,19 +3,20 @@
     color: var(--branco);
     text-align: center;
     padding: 2.5rem 2rem;
+  font-family: var(--fonte-principal);
 }
 
 .banner__titulo {
   font-size: 18px;
   font-weight: 700;
-  font-family: "Poppins";
+  /* font-family: "Poppins"; */
 }
 
 .banner__texto {
   font-weight: 500;
   margin: 1rem 0;
   /* font-family: "Poppins"; */
-  font-family: var(--fonte-principal);
+  /* font-family: var(--fonte-principal); */
   
 }
 
@@ -36,4 +37,19 @@
   text-align: center;
   background: url(../img/Pesquisa.svg) no-repeat;
   background-position: 1rem;
+}
+
+@media screen and (min-width: 1024px) {
+  .banner__titulo {
+    font-size: 36px;
+  }
+  .banner__pesquisa {
+    width: 50%;
+  }
+  .banner__texto  {
+    margin: 1rem  0 2rem 0;
+  }
+  .banner__pesquisa::placeholder {
+  background-position: 5rem;
+  }
 }
