--- a/css/cards.css
+++ b/css/cards.css
@@ -65,3 +65,10 @@
 .cards-botoes__escritora {
   margin-top: 40px ;
 }
+
+@media screen and (min-width: 1024px) {
+  .cards {
+    width: 40%;
+    margin: 2rem auto;
+  }
+}
