--- a/css/topicos.css
+++ b/css/topicos.css
@@ -30,3 +30,17 @@
   font-weight: 700;
   font-family: var(--fonte-principal);
 }
+
+@media screen and (min-width: 1024px) {
+  .topicos__titulo  {
+    font-size: 24px;
+  }
+  .topicos__lista {
+    margin: 0 10rem;
+  }
+
+  .topicos__link {
+    font-size: 24px;
+    
+  }
+}
